fix: Made feedback/warning buttons fixed on page or absolute on mobile

--- a/director/assets/sass/styles.sass
+++ b/director/assets/sass/styles.sass
@@ -217,7 +217,7 @@ h6.has-top-margin
 .open-embed
   width: 100%
   height: calc(100vh - #{$footer-height + $header-height})
-  margin-bottom: $footer-height + 20px
+  margin-bottom: 128px
   margin-top: -24px
 
 .open-footer
@@ -232,7 +232,13 @@ h6.has-top-margin
   height: auto
   padding-right: 6em
 
+  +until($desktop)
+    position: absolute
+    bottom: 30px
+    padding-right: 1.25rem
+
   .button.is-borderless
+    background-color: transparent
     .is-borderless-text
       text-decoration: underline
 
